finalize implementation + results csv